--- a/Styles/CountdownControl.xaml
+++ b/Styles/CountdownControl.xaml
@@ -7,12 +7,12 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:CountdownControl}">
-                    <Grid MaxWidth="350">
+                    <Grid MaxWidth="350" HorizontalAlignment="Center">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <controls:CountdownElement Grid.Column="0"
                                                    x:Name="Weeks"
