--- a/Features/Settings/SettingsRootView.xaml
+++ b/Features/Settings/SettingsRootView.xaml
@@ -96,9 +96,7 @@
     <Border Grid.RowSpan="2"
             Grid.Row="0"
             Grid.Column="1"
-            Width="1"
-            Margin="0 10 0 10"
-            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}" />
+            Style="{DynamicResource Styles.Border.Separator.Vertical}" />
     <TextBlock Grid.Row="0" Grid.Column="2" Text="Credits" Style="{DynamicResource HeaderStyle}" />
     <ContentControl Grid.Row="1" Grid.Column="2" s:View.Model="{Binding Credits}" />
 </Grid>
