--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -12,6 +12,7 @@
         <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarBorder.xaml" />
         <ResourceDictionary Source="pack://application:,,,/Styles/HoverableBorder.xaml" />
         <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarToggleMenu.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Styles/BorderSeparator.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource Styles.CountdownElement}" TargetType="{x:Type controls:CountdownElement}" />
     <Style BasedOn="{StaticResource Styles.CountdownControl}" TargetType="{x:Type controls:CountdownControl}" />
