--- a/Converters/Converters.xaml
+++ b/Converters/Converters.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:F1Desktop.Converters"
                     xmlns:wpf="clr-namespace:FamFamFam.Flags.Wpf;assembly=FamFamFam.Flags.Wpf">
-    <converters:IntThresholdConverter x:Key="IntThreshold" />
+    <converters:IntThresholdToBoolConverter x:Key="IntThresholdToBool" />
+    <converters:IntThresholdToVisibilityConverter x:Key="IntThresholdToVisibility"/>
     <converters:MultiBoolToVisibilityConverter x:Key="MultiBoolToVisibility" />
     
     <converters:CachedUrlImageConverter x:Key="CachedUrlImage" />
