--- a/Features/Standings/StandingsRootView.xaml
+++ b/Features/Standings/StandingsRootView.xaml
@@ -47,19 +47,9 @@
                     <Button Style="{DynamicResource {x:Static adonisUi:Styles.AccentToolbarButton}}"
                             Grid.Column="1"
                             ToolTipService.InitialShowDelay="0"
-                            Command="{s:Action ForceRefresh}">
+                            Command="{s:Action RefreshData}"
+                            ToolTip="Refresh">
                         <iconPacks:PackIconMaterial Kind="Cached" />
-                        <Button.ToolTip>
-                            <TextBlock>
-                                <Run Text="Updated At: " />
-                                <Run
-                                    Text="{Binding CachedAt, StringFormat={x:Static misc:Constants+UI.LongTimeFormat24Hour}}" />
-                                <LineBreak />
-                                <Run Text="Next Update: " />
-                                <Run
-                                    Text="{Binding CacheInvalidAt, StringFormat={x:Static misc:Constants+UI.LongTimeFormat24Hour}}" />
-                            </TextBlock>
-                        </Button.ToolTip>
                     </Button>
                 </Grid>
             </Border>
